# senile-rod

./: .env.dist  .gitignore  DOCKERFILE  README.md  bot.py  docker-compose.yml  dune  filter_messages.py  push.sh  pyproject.toml  rod_gen.ml  senile-rod.sh
senile_rod/: bot.py
senile_rod/constants/: constants.py
senile_rod/plugins/: rod_command.py
